2014-11-03  Yoni Rabkin <yrk@gnu.org>

	* net/eww.el (eww-list-bookmarks): Autoload.

2014-11-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-retransform-dom): Allow several text sub-nodes.

	* net/eww.el (eww-display-html): The charset is called `utf-8',
	not `utf8'.
	(eww-readable): Decode the saved text correctly.
	(eww-readable): Save the history before displaying so that we can
	go back to the non-readable version.
	(eww-display-html): Don't try to decode the text if we've been
	passed in a pre-parsed DOM.
	(eww-tag-title): Remove newlines and extra whitespace from the
	displayed title.

2014-11-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-readable): New command and keystroke.

	* net/shr.el (shr-retransform-dom): New function.

	* net/eww.el (eww-display-html): Set `eww-current-source' in the
	correct buffer.
	(eww-view-source): Use it.

2014-11-02  Ivan Shmakov <ivan@siamics.net>

	* net/eww.el (eww): Recognize colon-delimited IPv6 addresses.
	(Bug#18603).

2014-11-02  Brian McKenna <brian@brianmckenna.org>  (tiny change)

	* net/eww.el (eww-submit): Encode empty form values as "".  (Bug#17785).

2014-11-02  Ivan Shmakov <ivan@siamics.net>

	* net/eww.el (eww): Allow "file:/file/name" URLs.  (Bug#18825).

2014-11-02  Ivan Shmakov <ivan@siamics.net>

	* net/eww.el (eww-mode-map): Remove mentions of `eww-quit'.
	(Bug#18834).

2014-11-02  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* emacs-lisp/eieio.el (eieio-edebug-prin1-to-string): Adjust for
	use as advice.
	(edebug-setup-hook): Advise `edebug-prin1-to-string'.  (Bug#18897)

2014-11-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/pp.el (pp-macroexpand-expression): Use macroexpand-1
	(bug#18821).
	* progmodes/elisp-mode.el (emacs-lisp-macroexpand): Idem.

2014-11-01  Michael R. Mauger  <michael@mauger.com>

	* sql.el (sql-mode-oracle-font-lock-keywords): Correct regexp
	syntax, add new keywords, and parse longer keywords first.